Fixed alignment and font size of image captions

--- a/style.scss
+++ b/style.scss
@@ -284,6 +284,11 @@ footer {
   text-align: center;
 }
 
+.caption {
+  color: grey;
+  text-align: center;
+  font-size: 15px;
+}
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
